--- a/docs/flatweb.css
+++ b/docs/flatweb.css
@@ -644,7 +644,7 @@ article .number {
   left: 700px;
   z-index: 1;
   font: 300 96px "Source Sans Pro", sans-serif;
-  color: #dee9ed;
+  color: #821131;
 }
 
 article p {
@@ -819,324 +819,365 @@ footer .next:hover {
   border: none;
 }
 
+/* span.chapterToc{ */
+/*     font: 500 14px/60px "Source Sans Pro", sans-serif; */
+/*     color: #29313d; */
+/*     margin: 100px; */
+/*     a { */
+/*         color: #608da2; */
+/*         float: right; */
+/*         display: inline-block; */
+/*                  text-align: right; */
+/*     } */
+    
+/* } */
+
+/* span.sectionToc{ */
+/*     font: 200 13px/30px "Source Sans Pro", sans-serif; */
+/*     color: #29313d; */
+/*     a { */
+/*         color: #537d90; */
+/*          float: right; */
+/*          display: inline-block; */
+/*                   text-align: right; */
+/*     } */
+/* } */
+
+
+/* span.subsectionToc{ */
+/*     font: 100 12px/22px "Source Sans Pro", sans-serif; */
+/*     color: #29313d; */
+/*     a { */
+/*         color: #446879; */
+/*          float: right; */
+/*          display: inline-block; */
+/*          text-align: right; */
+/*     } */
+/* } */
+
 @media only screen and (max-width: 1344px) {
-  nav.wide {
-    display: none;
-  }
+    nav.wide {
+        display: none;
+    }
 
-  .code-lang {
-      display: none;
-  }
+    .code-lang {
+        display: none;
+    }
 
-  nav.floating {
-    display: block;
-  }
+    nav.floating {
+        display: block;
+    }
 
-  .page {
-    position: relative;
-    width: inherit;
-    max-width: 912px;
-    margin: 0 auto;
-  }
+    .page {
+        position: relative;
+        width: inherit;
+        max-width: 912px;
+        margin: 0 auto;
+    }
 
-  article {
-    width: inherit;
-    margin-right: 336px;
-  }
-  article .number {
-    top: 73px;
-    left: inherit;
-    right: 0;
-    font-size: 72px;
-  }
-  article h1 {
-    padding: 110px 0 18px 0;
-    font-size: 44px;
-  }
+    article {
+        width: inherit;
+        margin-right: 336px;
+    }
+    article .number {
+        top: 73px;
+        left: inherit;
+        right: 0;
+        font-size: 72px;
+    }
+    article h1 {
+        padding: 110px 0 18px 0;
+        font-size: 44px;
+    }
 }
 
 
 @media only screen and (max-width: 960px) {
-  body {
-    margin: 0;
-  }
+    body {
+        margin: 0;
+    }
 
-  nav.floating {
-    display: none;
-  }
+    nav.floating {
+        display: none;
+    }
 
-  nav.narrow {
-    display: block;
-  }
+    nav.narrow {
+        display: block;
+    }
 
-  .page {
-    margin: 0 48px;
-    width: inherit;
-  }
+    table.equation {
+        overflow-x: auto;
+        display: block;
+    }
+    
+    .page {
+        margin: 0 48px;
+        width: inherit;
+    }
 
-  article {
-    margin: 0;
-  }
-  article img.wide {
-    width: inherit;
-    max-width: 100%;
-  }
+    article {
+        margin: 0;
+    }
+    article img.wide {
+        width: inherit;
+        max-width: 100%;
+    }
 
-  aside {
-    position: inherit;
-    right: inherit;
-    width: inherit;
-    border-bottom: solid 1px #dee9ed;
-  }
-  aside p:first-child {
-    margin-top: 8px;
-  }
-  aside p:last-child {
-    margin-bottom: 8px;
-  }
-  aside div.codehilite:last-child {
-    margin-bottom: 12px;
-  }
-  aside img {
-    display: block;
-    max-width: 288px;
-    margin: 0 auto;
-  }
-  aside img.above {
-    position: relative;
-  }
+    aside {
+        position: inherit;
+        right: inherit;
+        width: inherit;
+        border-bottom: solid 1px #dee9ed;
+    }
+    aside p:first-child {
+        margin-top: 8px;
+    }
+    aside p:last-child {
+        margin-bottom: 8px;
+    }
+    aside div.codehilite:last-child {
+        margin-bottom: 12px;
+    }
+    aside img {
+        display: block;
+        max-width: 288px;
+        margin: 0 auto;
+    }
+    aside img.above {
+        position: relative;
+    }
 
-  aside + div.codehilite {
-    margin-top: 12px;
-  }
+    aside + div.codehilite {
+        margin-top: 12px;
+    }
 
-  div.codehilite + aside {
-    margin-top: 24px;
-  }
+    div.codehilite + aside {
+        margin-top: 24px;
+    }
 
-  .source-file {
-    display: none;
-  }
+    .source-file {
+        display: none;
+    }
 
-  .source-file-narrow {
-    display: block;
-  }
+    .source-file-narrow {
+        display: block;
+    }
 }
 @media only screen and (max-width: 630px) {
-  .page {
-    margin: 0 24px;
-    width: inherit;
-  }
+    .page {
+        margin: 0 24px;
+        width: inherit;
+    }
 
-  nav.narrow .prev,
-  nav.narrow .next {
-    padding: 0 24px;
-  }
+    nav.narrow .prev,
+    nav.narrow .next {
+        padding: 0 24px;
+    }
 }
 
 
 @media only screen and (max-width: 580px) {
-  body {
-    font-size: 15px;
-    line-height: 22px;
-  }
+    body {
+        font-size: 15px;
+        line-height: 22px;
+    }
 
-  .small-caps {
-    font-size: 12px;
-  }
+    .small-caps {
+        font-size: 12px;
+    }
 
-  .scrim {
-    background: url("rows-22.png");
-  }
+    .scrim {
+        background: url("rows-22.png");
+    }
 
-  nav.narrow img {
-    padding: 9px 0 1px 0;
-    height: 27px;
-  }
-  nav.narrow .prev,
-  nav.narrow .next {
-    top: 11px;
-  }
+    nav.narrow img {
+        padding: 9px 0 1px 0;
+        height: 27px;
+    }
+    nav.narrow .prev,
+    nav.narrow .next {
+        top: 11px;
+    }
 
-  article h1 {
-    font-size: 36px;
-    padding: 100px 0 14px 0;
-  }
-  article h1.part {
-    font-size: 30px;
-    padding: 97px 0 17px 0;
-  }
+    article h1 {
+        font-size: 36px;
+        padding: 100px 0 14px 0;
+    }
+    article h1.part {
+        font-size: 30px;
+        padding: 97px 0 17px 0;
+    }
 
-  /* Control the way chapter number looks on mobile */
-  article .number {
-    top: 30px;
-    font-size: 70px;
-  }
-  article p {
-    margin: 22px 0;
-  }
-  article ol,
-  article ul {
-    margin: 22px 0;
-    padding: 0 0 0 22px;
-  }
+    /* Control the way chapter number looks on mobile */
+    article .number {
+        top: 30px;
+        font-size: 70px;
+    }
+    article p {
+        margin: 22px 0;
+    }
+    article ol,
+    article ul {
+        margin: 22px 0;
+        padding: 0 0 0 22px;
+    }
 
-  blockquote {
-    margin: 27px 0 28px 0;
-  }
-  blockquote::before,
-  blockquote::after {
-    top: -17px;
-    font-size: 52px;
-  }
-  blockquote p {
-    margin: 0 22px;
-    font-size: 20px;
-    line-height: 33px;
-  }
+    blockquote {
+        margin: 27px 0 28px 0;
+    }
+    blockquote::before,
+    blockquote::after {
+        top: -17px;
+        font-size: 52px;
+    }
+    blockquote p {
+        margin: 0 22px;
+        font-size: 20px;
+        line-height: 33px;
+    }
 
-  footer .next {
-    font-size: 15px;
-  }
+    footer .next {
+        font-size: 15px;
+    }
 }
 
 dl {
-  display: grid;
-  grid-template-columns: max-content auto;
+    display: grid;
+    grid-template-columns: max-content auto;
 }
 
 .description {
-  display: block;
+    display: block;
 
-  dd {
-    margin: 30px;
-    /*grid-column-start: 2;*/
-  }
+    dd {
+        margin: 30px;
+        /*grid-column-start: 2;*/
+    }
 }
 
 dt {
-  font-weight: bold;
-  padding: 0 10px 0 0;
-  /* grid-column-start: 1; */
+    font-weight: bold;
+    padding: 0 10px 0 0;
+    /* grid-column-start: 1; */
 }
 
 .ebsr-8x-x-87 {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 .partToc {
-  color: #1481b8;
-  text-decoration: none;
-  border-bottom: solid 1px rgba(222, 233, 237, 0);
-  transition:
-    color 0.2s ease,
-    border-color 0.4s ease;
-  text-transform: uppercase;
-  font:
-    600 normal 18px/24px "Source Sans Pro",
-    sans-serif;
-  line-height: 24px;
+    color: #1481b8;
+    text-decoration: none;
+    border-bottom: solid 1px rgba(222, 233, 237, 0);
+    transition:
+        color 0.2s ease,
+        border-color 0.4s ease;
+    text-transform: uppercase;
+    font:
+        600 normal 18px/24px "Source Sans Pro",
+        sans-serif;
+    line-height: 24px;
 }
 
 @media screen and (max-width: 1000px) {
-  .tableofcontents {
-    columns: 1;
-    position: relative;
-    width: 1000px;
+    .tableofcontents {
+        columns: 1;
+        position: relative;
+        width: 1000px;
 
-    .chapterToc {
-      padding: 12px 0 0 36px;
-      font:
-        normal 16px/24px "Source Sans Pro",
-        sans-serif;
-      color: #7aa0b8;
-      list-style-type: none;
-      line-height: 30px;
-      font-weight: bold;
-    }
+        .chapterToc {
+            padding: 12px 0 0 36px;
+            font:
+                normal 16px/24px "Source Sans Pro",
+                sans-serif;
+            color: #7aa0b8;
+            list-style-type: none;
+            line-height: 30px;
+            font-weight: bold;
+        }
 
-    .sectionToc {
-      padding: 12px 0 0 36px;
-      font:
-        normal 16px/24px "Source Sans Pro",
-        sans-serif;
-      color: #7aa0b8;
-      list-style-type: none;
-      line-height: 30px;
-    }
+        .sectionToc {
+            padding: 12px 0 0 36px;
+            font:
+                normal 16px/24px "Source Sans Pro",
+                sans-serif;
+            color: #7aa0b8;
+            list-style-type: none;
+            line-height: 30px;
+        }
 
-    .subsectionToc {
-      padding: 12px 0 0 36px;
-      font:
-        normal 16px/24px "Source Sans Pro",
-        sans-serif;
-      color: #7aa0b8;
-      list-style-type: none;
-      line-height: 30px;
-    }
+        .subsectionToc {
+            padding: 12px 0 0 36px;
+            font:
+                normal 16px/24px "Source Sans Pro",
+                sans-serif;
+            color: #7aa0b8;
+            list-style-type: none;
+            line-height: 30px;
+        }
 
-    .addchapToc {
-      padding: 12px 0 0 36px;
-      font:
-        normal 16px/24px "Source Sans Pro",
-        sans-serif;
-      color: #7aa0b8;
-      list-style-type: none;
-      line-height: 30px;
-      font-weight: bold;
+        .addchapToc {
+            padding: 12px 0 0 36px;
+            font:
+                normal 16px/24px "Source Sans Pro",
+                sans-serif;
+            color: #7aa0b8;
+            list-style-type: none;
+            line-height: 30px;
+            font-weight: bold;
+        }
     }
-  }
 }
 
 @media screen and (min-width: 1000px) {
-  .tableofcontents {
-    columns: 1;
-    position: relative;
-    width: 700px;
-    padding: 0 0 40px 0;
+    .tableofcontents {
+        columns: 1;
+        position: relative;
+        width: 700px;
+        padding: 0 0 40px 0;
 
-    .chapterToc {
-      padding: 12px 0 0 36px;
-      font:
-        normal 16px/24px "Source Sans Pro",
-        sans-serif;
-      color: #7aa0b8;
-      list-style-type: none;
-      line-height: 30px;
-      font-weight: bold;
-    }
+        .chapterToc {
+            padding: 12px 0 0 36px;
+            font:
+                normal 16px/24px "Source Sans Pro",
+                sans-serif;
+            color: #7aa0b8;
+            list-style-type: none;
+            line-height: 30px;
+            font-weight: bold;
+        }
 
-    .sectionToc {
-      padding: 12px 0 0 50px;
-      font:
-        normal 16px/24px "Source Sans Pro",
-        sans-serif;
-      color: #7aa0b8;
-      list-style-type: none;
-      line-height: 30px;
-    }
+        .sectionToc {
+            padding: 12px 0 0 50px;
+            font:
+                normal 16px/24px "Source Sans Pro",
+                sans-serif;
+            color: #7aa0b8;
+            list-style-type: none;
+            line-height: 30px;
+        }
 
-    .subsectionToc {
-      padding: 12px 0 0 80px;
-      font:
-        normal 16px/24px "Source Sans Pro",
-        sans-serif;
-      color: #7aa0b8;
-      list-style-type: none;
-      line-height: 30px;
-    }
+        .subsectionToc {
+            padding: 12px 0 0 80px;
+            font:
+                normal 16px/24px "Source Sans Pro",
+                sans-serif;
+            color: #7aa0b8;
+            list-style-type: none;
+            line-height: 30px;
+        }
 
-    .addchapToc {
-      padding: 12px 0 0 36px;
-      font:
-        normal 16px/24px "Source Sans Pro",
-        sans-serif;
-      color: #7aa0b8;
-      list-style-type: none;
-      line-height: 30px;
-      font-weight: bold;
+        .addchapToc {
+            padding: 12px 0 0 36px;
+            font:
+                normal 16px/24px "Source Sans Pro",
+                sans-serif;
+            color: #7aa0b8;
+            list-style-type: none;
+            line-height: 30px;
+            font-weight: bold;
+        }
     }
-  }
 }
 
 /* List length of the bibliography */
@@ -1162,6 +1203,9 @@ dt.thebibliography {
     padding-right: 1ex;
     padding-left: 2ex;
     border-left: 6px solid #4fb1a1 !important;
+    border-top: 1px solid #4fb1a1 !important;
+    border-right: 1px solid #4fb1a1 !important;
+    border-bottom: 1px solid #4fb1a1 !important;
 
     p {
         margin: 8px 0;
@@ -1181,6 +1225,9 @@ dt.thebibliography {
     padding-right: 1ex;
     padding-left: 2ex;
     border-left: 6px solid #fcc055 !important;
+    border-top: 1px solid #fcc055 !important;
+    border-right: 1px solid #fcc055 !important;
+    border-bottom: 1px solid #fcc055 !important;
 
     p {
         margin: 8px 0;
@@ -1200,12 +1247,24 @@ dt.thebibliography {
 
 .informationblock {
     margin: 20px -12px 20px;
-    border-left: 6px solid #4fb1a1 !important;
+    border-left: 1px solid #4fb1a1 !important;
+    border-top: 1px solid #4fb1a1 !important;
+    border-right: 1px solid #4fb1a1 !important;
+    border-bottom: 1px solid #4fb1a1 !important;
     background: #edf7f6;
     font:
         normal 15px/20px "Source Sans Pro",
         sans-serif;
+    dd.description {
+        margin-top: 10px;
+    }
 
+    div img {
+        width: 100%;
+        height: 100%;
+    }
+
+    
     .noindent {
         margin: 8px 0;
     }
@@ -1228,7 +1287,10 @@ dt.thebibliography {
 
 .theoryblock {
     margin: -2px -12px 26px -12px;
-    border-left: 6px solid #42395f !important;
+    border-top: 1px solid #42395f !important;
+    border-left: 1px solid #42395f !important;
+    border-bottom: 1px solid #42395f !important;
+    border-right: 1px solid #42395f !important;
     background: #ebe9f2;
     font:
         normal 15px/20px "Source Sans Pro",
@@ -1241,6 +1303,7 @@ dt.thebibliography {
     .title {
         background: #ebe9f2;
         padding: 3px 10px;
+        margin: 0px 5px -25px;
         color: #42395f;
     }
     .box-content {
@@ -1277,7 +1340,10 @@ dt.thebibliography {
 
 .exerciseblock {
     margin: -2px -12px 26px -12px;
-    border-left: 6px solid #326199 !important;
+    border-left: 1px solid #326199 !important;
+    border-top: 1px solid #326199 !important;
+    border-right: 1px solid #326199 !important;
+    border-bottom: 1px solid #326199 !important;
     background: #e8eff7;
     font:
         normal 15px/20px "Source Sans Pro",
@@ -1390,7 +1456,9 @@ dd.description {
 }
 
 .caption {
-    font-size: 14px;
+
+    font-size: 12px;
+    color: #333333;
 
     span.id {
         font-weight: bold;
@@ -1424,16 +1492,21 @@ div {
     }
 }
 
+.MathJax_Display, .MJXc-display, .MathJax_SVG_Display {
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
 table {
-    .equation:hover {
-        transition: transform 0.5s ease;
-        transform: scale(
-            1.5
-        ); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-        background: white;
-        border-style: solid;
-        border-color: #29313d;
-    }
+    /* .equation:hover { */
+    /*     /\* transition: transform 0.5s ease; *\/ */
+    /*     /\* transform: scale( *\/ */
+    /*     /\*     1.5 *\/ */
+    /*     /\* ); /\\* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) *\\/ *\/ */
+    /*     background: white; */
+    /*     border-style: solid; */
+    /*     border-color: #29313d; */
+    /* } */
 }
 
 .eq-no {
@@ -1464,13 +1537,14 @@ h2 {
 }
 
 #toc-button {
+    border-radius: 5px;
     position: fixed;
-    right: 0px;
-    bottom: 0px;
+    right: 10px;
+    bottom: 10px;
     z-index: 999;
     background-color: #29313d;
     border: none;
-    padding: 15px 30px;
+    padding: 10px 20px;
     font: 400 18px/24px "Source Sans Pro", sans-serif;
     color: #7aa0b8;
 }
